salesforce-main/src/main/default/objects/Agent_Approval__c/Agent_Approval__c.object-meta.xml
<CustomObject>
    <label>Agent Approval</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Agent Approval ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>