salesforce-main/src/main/default/objects/Agent_Approval__c/fields/Approved_by_Legal__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Legal__c</fullName>
    <label>Approved by Legal</label>
    <type>Date</type>
</CustomField>