salesforce-main/src/main/default/objects/Agent_Approval__c/fields/Due_Diligence_2__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_2__c</fullName>
    <label>Due Diligence 2</label>
    <type>Date</type>
</CustomField>