salesforce-main/src/main/default/objects/Agent_Approval__c/fields/References_Checked__c.field-meta.xml
<CustomField>
    <fullName>References_Checked__c</fullName>
    <label>References Checked</label>
    <type>Date</type>
</CustomField>