salesforce-main/src/main/default/objects/Agent_Approval__c/fields/References_Received__c.field-meta.xml
<CustomField>
    <fullName>References_Received__c</fullName>
    <label>References Received</label>
    <type>Date</type>
</CustomField>